updated YAML file
